# totem-os

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  IMPLEMENTATION.md  Makefile  README.md  SPEC.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  test_db_connection.py
.cursor/: mcp.example.json
.github/workflows/: ci.yml
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
.taskmaster/tasks/: tasks.json
.totem/: config.example.toml  config.toml
apps/api/: Dockerfile  pyproject.toml
apps/api/src/api/: main.py
apps/web/: package.json
demo_vault/00_inbox/2026-01-12/: capture_20260112_010614.txt  capture_20260112_010614.txt.meta.json
demo_vault/20_memory/: entities.json  principles.md
demo_vault/20_memory/daily/: 2026-01-12.md
demo_vault/30_tasks/: todo.md
demo_vault/90_system/: config.yaml  ledger.jsonl
docs/: dev_setup.md
docs/milestones/: milestone_8.md  phase_3.md
scripts/: dev_api.ps1  dev_bootstrap.sh  tmp_cleanup_tooling_chatgpt.py
src/totem/: __init__.py  capture.py  cli.py  config.py  distill.py  ingest_manifest.py  ledger.py  paths.py  review.py  route.py
src/totem/agents/: intent_arbiter.py  stubs.py
src/totem/chatgpt/: __init__.py  conversation_parser.py  daily_note.py  downloader.py  email_parser.py  gmail_client.py  ingest.py  local_ingest.py  metadata.py  models.py  obsidian_writer.py  router.py  state.py
tests/: __init__.py  conftest.py  test_capture.py  test_chatgpt.py  test_chatgpt_routing.py  test_daemon_ask_packing.py  test_daemon_chunking.py  test_daemon_embeddings.py  test_daemon_index.py  test_daemon_search_excerpts.py  test_daemon_search_expand_links.py  test_daemon_search_filters.py  test_daemon_search_fts.py  test_daemon_search_vector.py  test_daemon_sessions.py  test_daemon_time_scoring.py  test_distill.py  test_hybrid_router.py  test_ingest_manifest.py  test_intent_arbiter.py  test_ledger.py  test_omi_client.py  test_omi_daily_note.py  test_omi_sync.py  test_review.py  test_route.py
(+58 files in other folders)
