[project]
name = "totem-api"
version = "0.0.1"
description = "Totem OS API (LangGraph placeholder)"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
target-version = "py310"
lint.select = ["E", "F", "I"]
lint.ignore = []

[project.scripts]
totem-api = "api.main:main"


